# MergeSourceFile

./: .travis.yml  API_DOCUMENTATION.md  CHANGELOG.md  CONFIGURATION.md  EXAMPLES.md  LICENSE  PROJECT_STRUCTURE.md  PYPI_COMPATIBILITY_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  PYPI_REQUIREMENTS_CHECKLIST.md  README.md  config.example.toml  config.toml.example  pyproject.toml  run_tests.py
.circleci/: config.yml
MergeSourceFile/: __init__.py  config_loader.py  core.py  main.py  plugin_system.py  resource_io.py  template_engine.py
MergeSourceFile/extensions/: __init__.py  sqlplus.py
MergeSourceFile/plugins/: __init__.py  jinja2_plugin.py  sqlplus_plugin.py
scripts/: README.md  run_tests.py
tests/: __init__.py  conftest.py  test_config_loader.py  test_define_bug_fix.py  test_define_error_reporting.py  test_define_space_handling.py  test_improved_define_regex.py  test_include_conflict.py  test_integration.py  test_jinja2.py  test_main.py  test_plugin_system.py  test_processing_orders.py  test_resource_io.py  test_sqlplus_extension.py  test_sqlplus_plugin.py  test_template_engine.py  test_toml_config.py  test_variable_namespace.py
