[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MergeSourceFile"
version = "1.0.0"
description = "A Python tool to process SQL*Plus scripts, resolving file inclusions (@, @@) and variable substitutions (DEFINE/UNDEFINE)"
readme = "README.md"
authors = [
    {name = "Alejandro G."}
]
license = "MIT"
keywords = ["sqlplus", "sql", "oracle", "script-processor", "file-merger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools>=61.0",
    "wheel>=0.40.0"
]
build = [
    "pyinstaller>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/alegorico/MergeSourceFile"
Repository = "https://github.com/alegorico/MergeSourceFile"
Issues = "https://github.com/alegorico/MergeSourceFile/issues"

[project.scripts]
mergesourcefile = "MergeSourceFile.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["MergeSourceFile*"]
exclude = ["tests*"]


