[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MergeSourceFile"
version = "2.0.0"
description = "A modular, plugin-based Python tool to process SQL*Plus scripts with Jinja2 template support, resolving file inclusions (@, @@) and variable substitutions (DEFINE/UNDEFINE)"
readme = "README.md"
authors = [
    {name = "Alejandro G."}
]
license = {text = "MIT"}
keywords = ["sqlplus", "sql", "oracle", "script-processor", "file-merger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.0.0",
    "PyYAML>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools>=75.0.0",
    "wheel>=0.40.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]
build = [
    "pyinstaller>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/alegorico/MergeSourceFile"
Repository = "https://github.com/alegorico/MergeSourceFile"
Issues = "https://github.com/alegorico/MergeSourceFile/issues"

[project.scripts]
msf = "MergeSourceFile.core:main"
mergesourcefile = "MergeSourceFile.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["MergeSourceFile*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=MergeSourceFile",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]


